# Goodone

./: .env.example  .gitignore  CLAUDE.md  INDEX.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/: verify-m1.md
.claude/conductor/: context.md
.github/workflows/: ci.yml  deploy.yml
docs/: accounting_rules.md  architecture.md  chart_of_accounts.md  chart_of_accounts.yaml  context.md  ifrs_treatments.md  plan.md
docs/design/: api_design.md  frontend_design.md  responsiveness.md
docs/qa/: smoketests.md  test_plan.md
docs/rules/: approval_rules.md  ingestion_rules.md  journal_rules.md  period_close_rules.md
docs/runbooks/: disaster_recovery.md  fx_rate_override.md  month_end_close.md  period_reopen.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Money.tsx
frontend/src/pages/: BankReconciliation.tsx  Budget.tsx  Chat.tsx  DataQuality.tsx  FxRates.tsx  Home.tsx  LmsSync.tsx  Login.tsx  ManualJe.tsx  MasterData.tsx  PeriodClose.tsx  Profitability.tsx  Reports.tsx  Sanctions.tsx  Settings.tsx  SubLedgers.tsx  TutorPayouts.tsx  UploadSessions.tsx
infra/: deploy.md
infra/docker/: backend.Dockerfile  docker-compose.prod.yml  frontend.Dockerfile  nginx.conf
infra/grafana/: README.md  tuitional-ledger.json  tuitional-overview.json
infra/postgres/: init.sql
infra/prometheus/: alerts.yml  prometheus.yml
infra/systemd/: tuitional-api.service  tuitional-backup.service  tuitional-backup.timer  tuitional-worker.service
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_phase3_schema.py
scripts/: .gitkeep  backup.sh  restore.sh  seed_dev_data.py
src/agents/: amortization.py  depreciation.py  fx.py  payroll.py  period_close.py  profitability.py  reporting.py  revenue.py  sanctions.py
src/api/: auth.py  dependencies.py  main.py  observability.py
src/api/routes/: auth.py  budget.py  chat.py  fx.py  ingestion.py  manual_je.py  master_data.py  payroll.py  period.py  quarantine.py  reports.py  sanctions.py  subledgers.py  system.py  uploads.py
src/chat/: __init__.py  models.py  pg_service.py  pg_store.py  provider.py  service.py  tools.py
src/core/: config.py  db.py  exceptions.py  logging.py  money.py
src/email/: provider.py
src/ingestion/: bank.py  fx.py  lms.py  manual_upload.py  sheets.py
src/ledger/: coa.py  coa_loader.py  period.py  posting.py  subledger.py
src/subledgers/: fixed_asset.py  intangible.py  prepaid.py  sanction_memo.py  student_wallet.py  tutor_payable.py
src/validation/: quarantine.py  rules.py
tests/: conftest.py  test_factories.py  test_no_float.py
tests/agents/: test_payroll_math.py
tests/chat/: test_chat_service.py  test_stub_provider.py
tests/core/: test_money.py
tests/db/: test_coa_loader.py  test_migration.py  test_period_integration.py  test_posting_integration.py
tests/factories/: __init__.py  coa.py  fx.py  journals.py  people.py
tests/fixtures/smoketest/phase2/: .gitkeep  expected.json
tests/ingestion/: test_bank.py  test_lms_mock.py
tests/ledger/: test_coa.py  test_period_format.py  test_posting_validation.py  test_subledger_helpers.py
tests/properties/: conftest.py  test_balance_invariant.py  test_immutability.py  test_no_negative_wallet.py  test_reconciliation_invariant.py  test_reversal_correctness.py
tests/smoketest/phase2/: test_partial.py
tests/validation/: test_rules.py
